# solhat

./: Cargo.toml  README.md  location.sh  solhat_moon.sh  solhat_sun.sh
.github/workflows/: rust.yml
src/: anaysis.rs  calibrationframe.rs  centerofmass.rs  context.rs  datasource.rs  drizzle.rs  fpmap.rs  framerecord.rs  hotpixel.rs  ldcorrect.rs  lib.rs  limiting.rs  mean.rs  median.rs  offsetting.rs  parallacticangle.rs  rotation.rs  ser.rs  solar.rs  stacking.rs  stats.rs  target.rs  threshtest.rs  timestamp.rs
tests/: hotpixel.rs
tests/testdata/: hotpixels.toml
